# Caffeine-Scout

./: .env.example  .gitignore  LIVE_SCAN_EVIDENCE.md  README.md  config.example.yaml  pyproject.toml
src/caffeine_scout/: __init__.py  alerts.py  cli.py  config.example.yaml  config.py  crawler.py  database.py  models.py  normalization.py  presentation.py  scoring.py  service.py
src/caffeine_scout/sources/: __init__.py  acme.py  amazon.py  cvs.py  discovery.py  jsonld.py  mock.py  target.py  template.py
tests/: conftest.py  test_crawler.py  test_normalization.py  test_persistence_and_output.py  test_retailer_discovery.py  test_scoring.py  test_sources_and_service.py
tests/fixtures/: captcha.html  cvs_category_page_1.html  cvs_category_page_2.html  login_required.html  next_product.html  no_pricing.html  no_public_price.html  product_403.html  product_aggregate_offer.html  product_group_offer.html  product_offer.html  public_product_response.json  rate_limited.json  raw_offers.json  rendered_price.html  robots_disallowed.txt  robots_unavailable.json  target_category_page_1.html  target_category_page_2.html
