[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "caffeine-scout"
version = "0.1.0"
description = "Find energy-drink deals before your wallet gets mugged."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Caffeine Scout contributors" }]
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "httpx>=0.27,<1",
  "playwright>=1.49,<2",
  "pydantic>=2.9,<3",
  "python-dotenv>=1.0,<2",
  "pyyaml>=6.0,<7",
  "rapidfuzz>=3.10,<4",
  "rich>=13.9,<15",
  "sqlalchemy>=2.0,<3",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.13,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.8,<1",
  "types-PyYAML>=6.0,<7",
]

[project.scripts]
caffeine-scout = "caffeine_scout.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/caffeine_scout"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["caffeine_scout"]
plugins = ["pydantic.mypy"]
